# QuotaRadar

./: .gitignore  LICENSE  QUICKSTART.en.md  QUICKSTART.md  README.en.md  README.md  README.zh-Hans.md  TODO.en.md  TODO.md  install.sh
.github/workflows/: behavior-tests.yml  desktop-tauri.yml  (+1 more)
QuotaBar/: AppDelegate.swift  Info.plist
QuotaRadar/: AppDelegate.swift  Info.plist
Tests/: run_behavior_tests.sh  run_visual_qa.sh
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs
apps/desktop-tauri/src-tauri/src/commands/: app_state.rs  auth.rs  auth_tests.rs  credentials.rs  credentials_tests.rs  external.rs  mod.rs  providers.rs  settings.rs  window.rs
apps/desktop-tauri/src-tauri/src/domain/: credential.rs  diagnostics.rs  mod.rs  provider.rs  quota.rs  settings.rs  tests.rs
apps/desktop-tauri/src-tauri/src/platform/: mod.rs  tests.rs  tray.rs  web_auth.rs  window.rs
apps/desktop-tauri/src-tauri/src/providers/: aliyun_coding_plan.rs  aliyun_coding_plan_tests.rs  anthropic_credits.rs  anthropic_credits_tests.rs  anysearch.rs  anysearch_tests.rs  bocha.rs  bocha_tests.rs  brave.rs  brave_tests.rs  claude_subscription.rs  claude_subscription_tests.rs  codex_subscription.rs  codex_subscription_tests.rs  deepseek.rs  exa.rs  exa_tests.rs  http.rs  kimi_subscription.rs  kimi_subscription_tests.rs  mod.rs  opencode_go.rs  opencode_go_tests.rs  querit.rs  querit_tests.rs  registry.rs  serpapi.rs  serpapi_tests.rs  serper.rs  serper_tests.rs  tavily.rs  tencent_cloud_coding_plan.rs  tencent_cloud_coding_plan_tests.rs  tests.rs  volcengine_coding_plan.rs  volcengine_coding_plan_tests.rs  wxmp.rs  wxmp_tests.rs  xfyun_coding_plan.rs  xfyun_coding_plan_tests.rs
apps/desktop-tauri/src-tauri/src/storage/: credential_importer.rs  credential_importer_tests.rs  metadata_store.rs  metadata_store_tests.rs  migration.rs  migration_io.rs  migration_io_tests.rs  migration_tests.rs  mod.rs  secret_store.rs  secret_store_tests.rs
docs/: desktop-tauri-implementation-plan.md  desktop-tauri-parity-checklist.md  desktop-tauri-release.md  desktop-tauri-ui-spec.md  provider-calibration.md  provider-calibration.zh-Hans.md  provider-capabilities.en.md  provider-capabilities.md  providers.md  providers.zh-Hans.md  quickstart.md  quickstart.zh-Hans.md  release-qa.md  release-qa.zh-Hans.md  roadmap.md  roadmap.zh-Hans.md  tauri-provider-migration-checklist.md
scripts/: check_tauri_sources.sh  live_acceptance.sh  live_acceptance_main.swift  package_dmg.sh  qa_tauri_macos_screenshots.sh  run_tauri_cargo_tests.sh  sign_tauri_macos_app.sh  sync_tauri_provider_icons.sh
(+126 files in other folders)
