[package]
name = "quotaradar-desktop-tauri"
version = "0.0.0"
description = "Quota Radar cross-platform desktop preview"
authors = ["Asklear"]
edition = "2021"

[lib]
name = "quotaradar_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
