[package]
name = "quotaradar-desktop-tauri"
version = "0.0.0"
description = "Quota Radar cross-platform desktop preview"
authors = ["Asklear"]
edition = "2021"

[lib]
name = "quotaradar_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
